# EmailNotifier

./: .gitignore  CMakeLists.txt  Makefile  instal.sh  plasma-applet-email_notifier.desktop  plasma-email-notifier.cpp  plasma-email-notifier.h  plasma-email-notifyer.cpp  plasma-email-notifyer.h  plasma-wapplet-email_notifyer.desktop  plasmoid.pro
Ui/: config.cpp  config.h  configUi.cpp  configUi.h  emailNotifierUi.cpp  emailNotifierUi.h
app/: Makefile  app.pro  emailNotifier  main.cpp
common/: Imap.cpp  Imap.h  Pop3.cpp  Pop3.h  Socket.cpp  config.cpp  configUi.cpp  emailAccount.h  emailNotifier.cpp  emailNotifierUi.cpp  emailNotifierUi.h  emailNotifyer.cpp  emailNotifyer.h  emailNotifyerUi.cpp  emailNotifyerUi.h  notifierApp.cpp  notifierApp.h  notifyerApp.cpp  notifyerApp.h
emailReader/: Imap.cpp  Imap.h  Pop3.cpp  Pop3.h  SConstruct  Socket.cpp  Socket.h  emailAccount.cpp  emailAccount.h  emailChecker.cpp  emailChecker.h  emailNotifier.cpp  emailNotifier.h  error.cpp  error.h  socketImpl.h
testApp/: Makefile  emailNotifier  main.cpp  notifierApp.h  testApp.pro
